// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextFieldComponent base should return a TextFieldComponent object 1`] = `
.c0 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  width: 100%;
  box-sizing: border-box;
  padding: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0 .grape-ui-select__control,
.c0 .DayPickerInput > input {
  margin: -1rem;
  padding: 1rem;
}

.c0 .grape-ui-select__control + .DayPickerInput-OverlayWrapper,
.c0 .DayPickerInput > input + .DayPickerInput-OverlayWrapper {
  -webkit-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  -ms-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  transform: translateX(-1rem) translateY(calc(1rem + 2px));
}

.c0[disabled] {
  opacity: 0.3;
}

.c0[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c0:focus,
.c0:focus-within {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c0:focus + label,
.c0:focus-within + label {
  color: hsl(323.3,84.6%,28%);
}

.c0::-webkit-input-placeholder,
.c0 input::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::-moz-placeholder,
.c0 input::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c0:-ms-input-placeholder,
.c0 input:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::placeholder,
.c0 input::placeholder {
  color: hsl(0,0%,75%);
}

.c0 .DayPickerInput > input {
  background: transparent;
  border: 0;
  font: inherit;
  outline: 0;
  width: 100%;
}

<input
  className="c0"
  readOnly={false}
  tabIndex="0"
  type="text"
/>
`;

exports[`TextFieldComponent base should return a large TextFieldComponent object 1`] = `
.c0 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 8px;
  border-radius: 8px;
  outline: 0;
  width: 100%;
  box-sizing: border-box;
  padding: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1.2rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0 .grape-ui-select__control,
.c0 .DayPickerInput > input {
  margin: -1rem;
  padding: 1rem;
}

.c0 .grape-ui-select__control + .DayPickerInput-OverlayWrapper,
.c0 .DayPickerInput > input + .DayPickerInput-OverlayWrapper {
  -webkit-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  -ms-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  transform: translateX(-1rem) translateY(calc(1rem + 2px));
}

.c0[disabled] {
  opacity: 0.3;
}

.c0[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c0:focus,
.c0:focus-within {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c0:focus + label,
.c0:focus-within + label {
  color: hsl(323.3,84.6%,28%);
}

.c0::-webkit-input-placeholder,
.c0 input::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::-moz-placeholder,
.c0 input::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c0:-ms-input-placeholder,
.c0 input:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::placeholder,
.c0 input::placeholder {
  color: hsl(0,0%,75%);
}

.c0 .DayPickerInput > input {
  background: transparent;
  border: 0;
  font: inherit;
  outline: 0;
  width: 100%;
}

<input
  className="c0"
  readOnly={false}
  tabIndex="0"
  type="text"
/>
`;

exports[`TextFieldComponent base should return a small TextFieldComponent object 1`] = `
.c0 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 2px;
  border-radius: 2px;
  outline: 0;
  width: 100%;
  box-sizing: border-box;
  padding: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0 .grape-ui-select__control,
.c0 .DayPickerInput > input {
  margin: -1rem;
  padding: 1rem;
}

.c0 .grape-ui-select__control + .DayPickerInput-OverlayWrapper,
.c0 .DayPickerInput > input + .DayPickerInput-OverlayWrapper {
  -webkit-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  -ms-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  transform: translateX(-1rem) translateY(calc(1rem + 2px));
}

.c0[disabled] {
  opacity: 0.3;
}

.c0[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c0:focus,
.c0:focus-within {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c0:focus + label,
.c0:focus-within + label {
  color: hsl(323.3,84.6%,28%);
}

.c0::-webkit-input-placeholder,
.c0 input::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::-moz-placeholder,
.c0 input::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c0:-ms-input-placeholder,
.c0 input:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::placeholder,
.c0 input::placeholder {
  color: hsl(0,0%,75%);
}

.c0 .DayPickerInput > input {
  background: transparent;
  border: 0;
  font: inherit;
  outline: 0;
  width: 100%;
}

<input
  className="c0"
  readOnly={false}
  tabIndex="0"
  type="text"
/>
`;

exports[`TextFieldComponent with a currency attribute should return a TextFieldComponent that contains has currency style 1`] = `
.c0 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  width: 100%;
  box-sizing: border-box;
  padding: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0 .grape-ui-select__control,
.c0 .DayPickerInput > input {
  margin: -1rem;
  padding: 1rem;
}

.c0 .grape-ui-select__control + .DayPickerInput-OverlayWrapper,
.c0 .DayPickerInput > input + .DayPickerInput-OverlayWrapper {
  -webkit-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  -ms-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  transform: translateX(-1rem) translateY(calc(1rem + 2px));
}

.c0[disabled] {
  opacity: 0.3;
}

.c0[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c0:focus,
.c0:focus-within {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c0:focus + label,
.c0:focus-within + label {
  color: hsl(323.3,84.6%,28%);
}

.c0::-webkit-input-placeholder,
.c0 input::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::-moz-placeholder,
.c0 input::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c0:-ms-input-placeholder,
.c0 input:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::placeholder,
.c0 input::placeholder {
  color: hsl(0,0%,75%);
}

.c0 .DayPickerInput > input {
  background: transparent;
  border: 0;
  font: inherit;
  outline: 0;
  width: 100%;
}

<input
  autoComplete="no"
  className="c0"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  readOnly={false}
  tabIndex="0"
  type="text"
  value="$"
/>
`;

exports[`TextFieldComponent with a integer attribute should return a TextFieldComponent that contains has integer style 1`] = `
.c0 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  width: 100%;
  box-sizing: border-box;
  padding: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0 .grape-ui-select__control,
.c0 .DayPickerInput > input {
  margin: -1rem;
  padding: 1rem;
}

.c0 .grape-ui-select__control + .DayPickerInput-OverlayWrapper,
.c0 .DayPickerInput > input + .DayPickerInput-OverlayWrapper {
  -webkit-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  -ms-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  transform: translateX(-1rem) translateY(calc(1rem + 2px));
}

.c0[disabled] {
  opacity: 0.3;
}

.c0[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c0:focus,
.c0:focus-within {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c0:focus + label,
.c0:focus-within + label {
  color: hsl(323.3,84.6%,28%);
}

.c0::-webkit-input-placeholder,
.c0 input::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::-moz-placeholder,
.c0 input::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c0:-ms-input-placeholder,
.c0 input:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::placeholder,
.c0 input::placeholder {
  color: hsl(0,0%,75%);
}

.c0 .DayPickerInput > input {
  background: transparent;
  border: 0;
  font: inherit;
  outline: 0;
  width: 100%;
}

<input
  autoComplete="no"
  className="c0"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  readOnly={false}
  tabIndex="0"
  type="text"
  value=""
/>
`;

exports[`TextFieldComponent with a numeric attribute should return a TextFieldComponent that contains has numeric style 1`] = `
.c0 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  width: 100%;
  box-sizing: border-box;
  padding: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0 .grape-ui-select__control,
.c0 .DayPickerInput > input {
  margin: -1rem;
  padding: 1rem;
}

.c0 .grape-ui-select__control + .DayPickerInput-OverlayWrapper,
.c0 .DayPickerInput > input + .DayPickerInput-OverlayWrapper {
  -webkit-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  -ms-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  transform: translateX(-1rem) translateY(calc(1rem + 2px));
}

.c0[disabled] {
  opacity: 0.3;
}

.c0[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c0:focus,
.c0:focus-within {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c0:focus + label,
.c0:focus-within + label {
  color: hsl(323.3,84.6%,28%);
}

.c0::-webkit-input-placeholder,
.c0 input::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::-moz-placeholder,
.c0 input::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c0:-ms-input-placeholder,
.c0 input:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::placeholder,
.c0 input::placeholder {
  color: hsl(0,0%,75%);
}

.c0 .DayPickerInput > input {
  background: transparent;
  border: 0;
  font: inherit;
  outline: 0;
  width: 100%;
}

<input
  autoComplete="no"
  className="c0"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  readOnly={false}
  tabIndex="0"
  type="text"
  value=""
/>
`;

exports[`TextFieldComponent with a password attribute should return a TextFieldComponent of input type password 1`] = `
.c0 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  width: 100%;
  box-sizing: border-box;
  padding: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0 .grape-ui-select__control,
.c0 .DayPickerInput > input {
  margin: -1rem;
  padding: 1rem;
}

.c0 .grape-ui-select__control + .DayPickerInput-OverlayWrapper,
.c0 .DayPickerInput > input + .DayPickerInput-OverlayWrapper {
  -webkit-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  -ms-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  transform: translateX(-1rem) translateY(calc(1rem + 2px));
}

.c0[disabled] {
  opacity: 0.3;
}

.c0[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c0:focus,
.c0:focus-within {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c0:focus + label,
.c0:focus-within + label {
  color: hsl(323.3,84.6%,28%);
}

.c0::-webkit-input-placeholder,
.c0 input::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::-moz-placeholder,
.c0 input::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c0:-ms-input-placeholder,
.c0 input:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::placeholder,
.c0 input::placeholder {
  color: hsl(0,0%,75%);
}

.c0 .DayPickerInput > input {
  background: transparent;
  border: 0;
  font: inherit;
  outline: 0;
  width: 100%;
}

<input
  className="c0"
  readOnly={false}
  tabIndex="0"
  type="password"
/>
`;

exports[`TextFieldComponent with a phone attribute should return a TextFieldComponent that contains has phone style 1`] = `
.c0 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  width: 100%;
  box-sizing: border-box;
  padding: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0 .grape-ui-select__control,
.c0 .DayPickerInput > input {
  margin: -1rem;
  padding: 1rem;
}

.c0 .grape-ui-select__control + .DayPickerInput-OverlayWrapper,
.c0 .DayPickerInput > input + .DayPickerInput-OverlayWrapper {
  -webkit-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  -ms-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  transform: translateX(-1rem) translateY(calc(1rem + 2px));
}

.c0[disabled] {
  opacity: 0.3;
}

.c0[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c0:focus,
.c0:focus-within {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c0:focus + label,
.c0:focus-within + label {
  color: hsl(323.3,84.6%,28%);
}

.c0::-webkit-input-placeholder,
.c0 input::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::-moz-placeholder,
.c0 input::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c0:-ms-input-placeholder,
.c0 input:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::placeholder,
.c0 input::placeholder {
  color: hsl(0,0%,75%);
}

.c0 .DayPickerInput > input {
  background: transparent;
  border: 0;
  font: inherit;
  outline: 0;
  width: 100%;
}

<input
  autoComplete="no"
  className="c0"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  readOnly={false}
  tabIndex="0"
  type="text"
  value=""
/>
`;

exports[`TextFieldComponent with a postalCode attribute should return a TextFieldComponent that contains has postalCode style 1`] = `
.c0 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  width: 100%;
  box-sizing: border-box;
  padding: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0 .grape-ui-select__control,
.c0 .DayPickerInput > input {
  margin: -1rem;
  padding: 1rem;
}

.c0 .grape-ui-select__control + .DayPickerInput-OverlayWrapper,
.c0 .DayPickerInput > input + .DayPickerInput-OverlayWrapper {
  -webkit-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  -ms-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  transform: translateX(-1rem) translateY(calc(1rem + 2px));
}

.c0[disabled] {
  opacity: 0.3;
}

.c0[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c0:focus,
.c0:focus-within {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c0:focus + label,
.c0:focus-within + label {
  color: hsl(323.3,84.6%,28%);
}

.c0::-webkit-input-placeholder,
.c0 input::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::-moz-placeholder,
.c0 input::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c0:-ms-input-placeholder,
.c0 input:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::placeholder,
.c0 input::placeholder {
  color: hsl(0,0%,75%);
}

.c0 .DayPickerInput > input {
  background: transparent;
  border: 0;
  font: inherit;
  outline: 0;
  width: 100%;
}

<input
  autoComplete="no"
  className="c0"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  readOnly={false}
  tabIndex="0"
  type="text"
  value=""
/>
`;

exports[`TextFieldComponent with an email attribute should return a TextFieldComponent of input type email 1`] = `
.c0 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  width: 100%;
  box-sizing: border-box;
  padding: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0 .grape-ui-select__control,
.c0 .DayPickerInput > input {
  margin: -1rem;
  padding: 1rem;
}

.c0 .grape-ui-select__control + .DayPickerInput-OverlayWrapper,
.c0 .DayPickerInput > input + .DayPickerInput-OverlayWrapper {
  -webkit-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  -ms-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  transform: translateX(-1rem) translateY(calc(1rem + 2px));
}

.c0[disabled] {
  opacity: 0.3;
}

.c0[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c0:focus,
.c0:focus-within {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c0:focus + label,
.c0:focus-within + label {
  color: hsl(323.3,84.6%,28%);
}

.c0::-webkit-input-placeholder,
.c0 input::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::-moz-placeholder,
.c0 input::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c0:-ms-input-placeholder,
.c0 input:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::placeholder,
.c0 input::placeholder {
  color: hsl(0,0%,75%);
}

.c0 .DayPickerInput > input {
  background: transparent;
  border: 0;
  font: inherit;
  outline: 0;
  width: 100%;
}

<input
  className="c0"
  readOnly={false}
  tabIndex="0"
  type="email"
/>
`;
